...
                ),
                start = noticeStart,
                end = noticeEnd,
            )
            addLink(
                LinkAnnotation.Clickable(
                    tag = "notice",
                    linkInteractionListener = {
                        navController.navigate(Routes.NOTICE)
                    },
                ),
                start = noticeStart,
                end = noticeEnd,
...
